--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,33 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="text-center">
+  <h1>Sign up</h1>
+</div>
+
+<div class="row mt-3">
+  <div class="col-sm-6 offset-sm-3">
+    <%= form_with model: @user do |f| %>
+      <%= render 'layouts/error_message', model: f.object %>
+      
+      <div class="mb-3">
+        <%= f.label :name, 'Name' %>
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>  
+
+      <div class="mb-3">
+        <%= f.label :email, 'email' %>
+        <%= f.email_field :email, class: 'form-control' %>
+      </div>
+
+      <div class="mb-3">
+        <%= f.label :password, 'password' %>
+        <%= f.password_field :password, class: 'form-control' %>
+      </div>
+
+      <div class="mb-3">
+        <%= f.label :password_confirmation, 'confirmation' %>
+        <%= f.password_field :password_confilmation, class: 'form-control' %>
+      </div>
+
+      <%= f.submit 'Sign up', class: 'btn btn-primary mx-auto' %>
+    <% end %>
+  </div>
+</div>
