--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,30 +8,26 @@
       </button>
 
       <%# レスポンシブ %>
-      <div class="collapse navbar-collapse ms-auto" id="navbarmenus">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <%= link_to 'Sign up', signup_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">bbb</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">ccc</a>
-          </li>
-          <li>
-            <div class="dropdown">
-              <div class="dropdown-toggle text-white" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                Dropdown button
-              </div>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <% if logged_in? %>
+          <div class="btn-group">
+            <ul class="navbar-nav">
+              <li class="ms-3"><%= link_to 'Users', users_path, class: 'nav-link' %></li>
+            </ul>
+            
+            <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><%= current_user.name %></button>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li class="dropdown-item"><%= link_to 'My profile', user_path(current_user), class: 'nav-link' %></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
+            </ul>
+          </div>
+        <% else %>
+          <ul class="navbar-nav">
+            <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
+          </ul>
+        <% end %>
       </div>
     </div>
 </nav>
