--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,10 @@
-<div class="bg-secondary p-3 p-sm-5 my-4 rounded">
-  <div class="text-center text-white">
-    <h1 class="mb-5">Welcome to the Micropost</h1>
-    <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+<% if logged_in? %>
+  <p>ログインユーザ: <%= current_user.name %></p>
+<% else %>
+  <div class="bg-secondary p-3 p-sm-5 my-4 rounded">
+    <div class="text-center text-white">
+      <h1 class="mb-5">Welcome to the Micropost</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
   </div>
-</div>
+<% end %>
