--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,22 +8,22 @@
       <%= render 'layouts/error_message', model: f.object %>
       
       <div class="mb-3">
-        <%= f.label :name, 'Name' %>
+        <%= f.label :name, 'Name', class: 'col-form-label' %>
         <%= f.text_field :name, class: 'form-control' %>
       </div>  
 
       <div class="mb-3">
-        <%= f.label :email, 'email' %>
+        <%= f.label :email, 'email', class: 'col-form-label' %>
         <%= f.email_field :email, class: 'form-control' %>
       </div>
 
       <div class="mb-3">
-        <%= f.label :password, 'password' %>
+        <%= f.label :password, 'password', class: 'col-form-label' %>
         <%= f.password_field :password, class: 'form-control' %>
       </div>
 
       <div class="mb-3">
-        <%= f.label :password_confirmation, 'confirmation' %>
+        <%= f.label :password_confirmation, 'confirmation', class: 'col-form-label' %>
         <%= f.password_field :password_confilmation, class: 'form-control' %>
       </div>
 
